@@ -635,8 +635,9 @@ static void data2xml(CMPIData * data, void *obj, CMPIString * name, CMPIString *
       else if (*type == '%') {                  
          sb->ft->appendChars(sb, bTag);
          sb->ft->appendChars(sb, (char *) name->hdl);
-         if (param) sb->ft->appendChars(sb, "\" PARAMTYPE=\"string\">\n");
-         else sb->ft->appendChars(sb, "\" TYPE=\"string\">\n");
+         sb->ft->appendChars(sb, "\" EmbeddedObject=\"object\"");
+         if (param) sb->ft->appendChars(sb, " PARAMTYPE=\"string\">\n");
+         else sb->ft->appendChars(sb, " TYPE=\"string\">\n");
          if(data->value.inst) {
 	         sb->ft->appendChars(sb, "<VALUE>");
 	         sb->ft->appendChars(sb, "<![CDATA[");
